Implement serialize / deserialize / explain for the new enriched join
update all dependencies and tests